# mw_perf

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LLVM_VALUE_NUMBERING_USAGE.md  README.md  VNTableCongruence_Results_Summary.csv  synthetic_heavy_gvn.ll  test_input.ll
doc/: VNTableCongruence_Performance_Analysis.md  VNTableCongruence_Raw_Output.txt
include/: BinarySearch.hpp  LLVMValueNumbering.hpp  LinearSearch.hpp  VNTable.hpp
tests/: CMakeLists.txt  hello_bench.cpp  tLinearComplexityExample.cpp  tLogarithmicComplexityExample.cpp  tMemoryManagerExample.cpp  tStdMap.cpp  tStdMultiMap.cpp  tVNTable.cpp  tVNTableCongruence.cpp
tests/llvm/: CMakeLists.txt  tDeadCodeElimination.cpp  tLLVMValueNumbering.cpp  tPassPipeline.cpp  tPasses.cpp  tVNTableCongruenceSyntheticIR.cpp
